tests/fixtures/errors/e0004_duplicate_file_const.mimz
// expect: E0004
const N: int = 1
const N: int = 2
module M {
  out y: bit
  y = 0
}
